# quantum-deep-learning

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/qdl/data/: LightningDataModule.py
src/qdl/datasets/: mnist_classification.py  mnist_generation.py
src/qdl/layers/: quanvolution.py  rx_cnot.py
src/qdl/models/: LightningClassifier.py  LightningGenerator.py
src/qdl/models/classifiers/: cnn_qlstm_classifier.py
src/qdl/models/generators/: qlstm_generator.py
src/qdl/models/quantum/: qlstm.py
src/qdl/training/: training_classifier.py  training_classifier_colossalai.py  training_generator.py  training_generator_colossalai.py
src/qdl/training/conf/: config.yaml
src/qdl/training/conf/data/: mnist-classification.yaml  mnist-generation.yaml
src/qdl/training/conf/model/: cnn-qlstm-classifier.yaml  qlstm-generator.yaml
src/qdl/training/conf/trainer/: trainer-gpu.yaml
src/qdl/utils/: import_class.py
tests/layers/: test_quanvolution.py
